- [dev] android blurview theme

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "umeng": "mv ../SDK/Umeng/MainActivity.java ./android/app/src/main/java/com/czy0729/bangumi/MainActivity.java",
     "google": "mv ../SDK/Google/MainActivity.java ./android/app/src/main/java/com/czy0729/bangumi/MainActivity.java",
     "start": "expo start",
-    "android": "react-native run-android --no-jetifier",
+    "android": "sudo react-native run-android --no-jetifier",
     "build": "cd android && ./gradlew assembleRelease",
     "build:ios": "expo build:ios -c",
     "open": "open ./android/app/build/outputs/apk/release/",
@@ -53,7 +53,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-image-zoom-viewer": "2.2.26",
     "react-native-modal-popover": "0.0.12",
-    "react-native-navigation-bar-color": "1.0.0",
+    "react-native-navigation-bar-color": "2.0.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-render-html": "4.1.1",
     "react-native-restart": "0.0.14",
